--- a/Lesson1/lesson1_cw/index.html
+++ b/Lesson1/lesson1_cw/index.html
@@ -12,8 +12,33 @@
 
     // 1. Створити масив з 10 чисел (можна використовувати Math.random Та Math.floor). Скласти результат цих чисел в змінній result.
 
-    let result = [5, 10, 15, 20, 25, 30, 35, 40, 45, 50];
-    console.log(result);
+    // let random = [Math.floor(Math.random()*10),Math.floor(Math.random()*10)] //floor округлення. рандомне число, до 10
+    // console.log(random);
+    // console.log(random[0] + random[1]);
+    //
+    // console.log(result);
+
+let random = [
+
+    Math.floor(Math.random()*10),
+    Math.floor(Math.random()*10),
+    Math.floor(Math.random()*10),
+    Math.floor(Math.random()*10),
+    Math.floor(Math.random()*10),
+    Math.floor(Math.random()*10),
+    Math.floor(Math.random()*10),
+    Math.floor(Math.random()*10),
+    Math.floor(Math.random()*10),
+    Math.floor(Math.random()*10)
+
+]
+
+    console.log(random);
+
+    console.log(random[0]+random[1]+random[2]+random[3]+random[4]+random[5]+random[6]+random[7]+random[8]+random[9]);
+
+
+
 
 
     // 2. Створити об'єкт book з наступними полями  - назва, кількість сторінок, жанр
@@ -42,7 +67,7 @@
         {name: 'The Little Prince', pages: 200, genre: 'Novella', author: 'Antoine de Saint-Exupery'}
 
     ];
-    console.log(book1 [0]);
+    console.log(book1 [0].genre);
     console.log(book1 [1]);
     console.log(book1 [2]);
 
@@ -71,13 +96,19 @@
 
     // 7. У прямокутного трикутника дві сторони n (зі значенням 3) та m (зі значенням 4).
     // Знайдіть гіпотенузу k за теоремою Піфагора (потрібно використовувати функцію Math.pow (число, ступінь) або оператор зведення в ступінь **).
-
-    let n = 3;
-    let m = 4;
-    let k;
-    k = Math.sqrt(Math.pow(n, 2) + Math.pow(m, 2));
-
-    console.log(k);
+    //
+    // let n = 3;
+    // let m = 4;
+    // let k;
+    // k = Math.sqrt(Math.pow(n, 2) + Math.pow(m, 2));
+    //
+    // console.log(k);
+    //
+    //
+    // let n = prompt('введіть сторону n')
+    // let m = prompt('введіть сторону m')
+    // let k = Math.sqrt(Math.pow(n, 2) + Math.pow(m, 2));
+    // alert('result' + k);
 
 
 </script>
