--- a/Lesson2/lesson2_hw/index.html
+++ b/Lesson2/lesson2_hw/index.html
@@ -46,23 +46,24 @@
     // 3 - У нас є змінна test, якщо  не дорівнює true, виведіть 'Вірно', інакше виведіть 'Неправильно'.
     // Перевірте роботу скрипта при test, що дорівнює true, false. Напишіть два варіанти скрипта - з коротким записом(тернаркою)
 
-    // let test = !!prompt(`введіть дані`)
+    // let test = 500;
     //
-    // if (test === true) {
+    // if (test !== true) {
     //     console.log(`Вірно`);
     // } else {
     //     console.log('Неправильно');
     // }
-    //
-    //
+
+
+    // //
     // let test = 500;
-    // let qwe = test === 800 ? `Вірно` : 'Неправильно'
+    // let qwe = test !== 800 ? `Вірно` : 'Неправильно'
     //
     // console.log(qwe);
 
 
     // 4 - Якщо змінна a не дорівнює нулю, виведіть 'Вірно', інакше виведіть 'Невірно'. Перевірте  скрипт при a, що дорівнює 1, 0, -3
-
+    //
     // let a = +prompt(`введіть число`);
     //
     // if (a !== 0) {
