lesson2_additional final

--- a/Lesson2/lesson2_add/index.html
+++ b/Lesson2/lesson2_add/index.html
@@ -68,7 +68,9 @@
     // let anyNumber = +prompt(`enter any number`)
     //
     //
-    // anyNumber = (anyNumber < 0 ? `negative number` : `positive number`) || (`number is a zero`)
+    //  anyNumber = anyNumber === 0 ? `number is a zero` : anyNumber < 0 ? `negative number` : `positive number`;
+    //
+    //
     //
     // console.log(anyNumber)
 
