lesson11_cw final

--- a/lesson11/lesson11_cw/index.html
+++ b/lesson11/lesson11_cw/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<a href="favorites.html">FAVORITES</a>
+<a href="favorites.html">favorites</a>
 
 <script src="main.js"></script>
 
