--- a/mini-project/post-details.html
+++ b/mini-project/post-details.html
@@ -8,88 +8,61 @@
 
 <script>
     let urlParam = new URLSearchParams(window.location.search);
-    // let postParam = urlParam.get('Post_Id');
-    let userParam = urlParam.get('User_Id');
+
+    let postParam = urlParam.get('Post_Id');
+
+    console.log(postParam);
 
 
-    // /${postParam}
-    // console.log(postParam);
-    console.log(userParam);
+    fetch(`https://jsonplaceholder.typicode.com/posts/${postParam}`)
+        .then(post => post.json())
+        .then(post => {
+            console.log(post);
+            let wrapDiv = document.createElement('div');
 
-    fetch(`https://jsonplaceholder.typicode.com/users/${userParam}`)
-        .then(user => user.json())
-        .then(user => {
+            let divPost = document.createElement('div');
+            let idDiv = document.createElement('div');
+            let titleH3 = document.createElement('h3');
+            let bodyP = document.createElement('p');
+            let buttonPost = document.createElement('button');
 
-            let divContainer = document.createElement('div');
-            let h2Id = document.createElement('h2');
-            let h3Name = document.createElement('h3');
-            let h4UserName = document.createElement('h4');
-            let divEmail = document.createElement('div');
-            let divAddress = document.createElement('div');
-            let divStreet = document.createElement('div');
-            let divSuite = document.createElement("div");
-            let divCity = document.createElement("div");
-            let divZipcode = document.createElement("div");
-            let divGeo = document.createElement("div");
-            let divLat = document.createElement("div");
-            let divLng = document.createElement("div");
-            let divPhone = document.createElement("div");
-            let divWebsite = document.createElement("div");
-            let divCompany = document.createElement("div");
-            let divCompanyName = document.createElement("div");
-            let divCatchPhrase = document.createElement("div");
-            let divBs = document.createElement("div");
-
-            h2Id.innerText = user.id;
-            h3Name.innerText = user.name;
-            h4UserName.innerText = user.username;
-            divEmail.innerText = user.email;
-            divStreet.innerText = user.address.street;
-            divSuite.innerText = user.address.suite;
-            divCity.innerText = user.address.city;
-            divZipcode.innerText = user.address.zipcode;
-            divLat.innerText = user.address.geo.lat;
-            divLng.innerText = user.address.geo.lng;
-            divPhone.innerText = user.phone;
-            divWebsite.innerText = user.website;
-            divCompanyName.innerText = user.company.name;
-            divCatchPhrase.innerText = user.company.catchPhrase;
-            divBs.innerText = user.company.bs;
-
-            document.body.appendChild(divContainer);
-            divContainer.append(h2Id, h3Name, h4UserName, divEmail, divAddress);
-            divAddress.append(divStreet, divSuite, divCity, divZipcode, divGeo);
-            divGeo.append(divLat, divLng);
-            divContainer.append(divPhone, divWebsite, divCompany);
-            divCompany.append(divCompanyName, divCatchPhrase, divBs);
+            idDiv.innerText = post.id;
+            titleH3.innerText = post.title;
+            bodyP.innerText = post.body;
 
 
-            console.log(divContainer);
+            document.body.appendChild(wrapDiv);
+            wrapDiv.appendChild(divPost);
+            divPost.append(idDiv, titleH3, bodyP);
 
 
         });
 
 
-    fetch(`https://jsonplaceholder.typicode.com/posts/${userParam}/comments`)
+    fetch(`https://jsonplaceholder.typicode.com/posts/${postParam}/comments`)
         .then(comments => comments.json())
         .then(comments => {
             console.log(comments);
 
-            // for (const comment of comments) { }  ??????????????
+            for (const comment of comments) {
 
                 let commentsWrap = document.createElement('div');
                 let commentsId = document.createElement('h3');
-                let commentsTitle = document.createElement('h2');
+                let commentsPostId = document.createElement('h3');
+                let commentsEmail = document.createElement('h4');
+                let commentsName = document.createElement('h2');
                 let commentsBody = document.createElement('p');
 
-                commentsId.innerText = comments.id;
-                commentsTitle.innerText = comments.title;
-                commentsBody.innerText = comments.body;
+                commentsId.innerText = `Comment Id: ${comment.id}`;
+                commentsPostId.innerText = `Post Id: ${comment.postId}`;
+                commentsEmail.innerText = `e-mail: ${comment.email}`;
+                commentsName.innerText = comment.name;
+                commentsBody.innerText = comment.body;
+
 
                 document.body.appendChild(commentsWrap);
-                commentsWrap.append(commentsId, commentsTitle, commentsBody);
-
-
+                commentsWrap.append(commentsId,commentsPostId, commentsEmail, commentsName, commentsBody);
+            }
 
 
         });
